se agregó la navegación de componentes y obtener datos al hacer login

--- a/app/src/main/res/layout/activity_olvide_password.xml
+++ b/app/src/main/res/layout/activity_olvide_password.xml
@@ -8,7 +8,7 @@
     android:background="@color/login_bk_color"
     android:focusableInTouchMode="true"
     android:gravity="center"
-    tools:context=".LoginActivity">
+    tools:context=".OlvidePassword">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -77,7 +77,7 @@
             <TextView
                 style="@style/parent"
                 android:layout_marginTop="@dimen/loginViewsMargin"
-                android:onClick="onRegisterClick"
+                android:onClick="OnClickRegisterBack"
                 android:text="Crear cuenta nueva"
                 android:textAlignment="center"
                 android:textColor="@color/themeColor"
@@ -134,6 +134,6 @@
         android:layout_marginRight="11dp"
         android:layout_marginBottom="30dp"
         android:adjustViewBounds="false"
-        android:onClick="onLoginClick"
+        android:onClick="OnClickLoginBack"
         android:src="@drawable/ic_back_img" />
 </RelativeLayout>
