--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
                     android:hint="Correo Electrónico"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:textSize="16dp"/>
+                    android:textSize="16dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -67,7 +67,7 @@
                     android:hint="Contraseña"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:textSize="16dp"/>
+                    android:textSize="16dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -75,6 +75,7 @@
                 style="@style/viewParent"
                 android:layout_gravity="end"
                 android:layout_marginTop="10dp"
+                android:onClick="OnClickForgetPassword"
                 android:text="¿Olvidaste tu contraseña?"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="@dimen/newsMoreTextSize" />x
@@ -93,7 +94,7 @@
             <TextView
                 style="@style/parent"
                 android:layout_marginTop="@dimen/loginViewsMargin"
-                android:onClick="onLoginClick"
+                android:onClick="OnClickRegister"
                 android:text="¿No tienes una cuenta?\nRegistrate ahora!"
                 android:textAlignment="center"
                 android:textColor="@color/themeColor"
@@ -167,7 +168,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginRight="11dp"
         android:layout_marginBottom="30dp"
-        android:onClick="onLoginClick"
+        android:onClick="OnClickRegister"
         android:src="@drawable/ic_add_img" />
 
 </RelativeLayout>
