package add class

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/pantalla_principal">
     <fragment
         android:id="@+id/registrar_usuario"
-        android:name="com.gestion.appgestion.RegisterActivity"
+        android:name="com.gestion.appgestion.Vistas.Register_Activity"
         android:label="activity_register"
         tools:layout="@layout/activity_register" >
         <action
@@ -15,16 +15,16 @@
     </fragment>
     <fragment
         android:id="@+id/olvide_contraseña"
-        android:name="com.gestion.appgestion.OlvidePassword"
+        android:name="com.gestion.appgestion.Vistas.Password_Activity"
         android:label="activity_olvide_password"
-        tools:layout="@layout/activity_olvide_password">
+        tools:layout="@layout/activity_password">
         <action
             android:id="@+id/action_olvide_contraseña_to_pantalla_principal"
             app:destination="@id/pantalla_principal" />
     </fragment>
     <fragment
         android:id="@+id/pantalla_principal"
-        android:name="com.gestion.appgestion.OlvidePassword"
+        android:name="com.gestion.appgestion.Vistas.Password_Activity"
         android:label="activity_login"
         tools:layout="@layout/activity_login">
         <action
