--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -60,6 +60,7 @@
                     android:id="@+id/editTextEmail"
                     style="@style/modifiedEditText"
                     android:hint="Correo Electrónico"
+                    android:drawableStart="@drawable/ic_baseline_email_24"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:textSize="16dp"/>
