--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,8 @@
     <color name="whiteTextColor">#fff</color>
     <color name="primaryTextColor">#11CFC5</color>
 
-    <color name="green_dark">#062925</color>
+    <color name="green_dark">#00838F</color>
     <color name="grenn_normal">#044a42</color>
     <color name="green_light">#3a9188</color>
-    <color name="green_light_2">#b8e1dd</color>
+    <color name="green_light_2">#FFFFFF</color>
 </resources>
