--- a/app/src/main/res/layout/list_elements.xml
+++ b/app/src/main/res/layout/list_elements.xml
@@ -8,13 +8,13 @@
     app:cardCornerRadius="20dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
         android:orientation="vertical">
-        
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
             android:padding="6dp">
 
             <ImageView
-                android:id="@+id/image_cardview"
+                android:id="@+id/task_image"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
@@ -35,55 +35,35 @@
 
             <LinearLayout
                 android:id="@+id/linearLayour_main"
+                android:layout_marginLeft="4dp"
+                android:layout_toRightOf="@id/task_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="5dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:layout_marginTop="2dp"
-                android:layout_toEndOf="@id/image_cardview"
-                android:orientation="vertical"
-                android:layout_marginLeft="4dp"
-                android:layout_toRightOf="@id/image_cardview">
+                android:orientation="vertical">
                 <TextView
-                    android:id="@+id/tittle_element"
+                    android:id="@+id/task_tittle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:text="Test Prueba"
+                    android:maxLines="1"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"/>
                 <TextView
-                    android:id="@+id/descripcion_element"
+                    android:id="@+id/task_descripcion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
                     android:text="Second test"
                     android:textSize="15sp"/>
-                
+
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/task_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="50dp"
-                android:layout_marginRight="53dp"
-                android:text="Pendiente"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
-
-            <Button
-                android:id="@+id/task_favorite"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:layout_gravity="end"
-                android:foreground="@drawable/ic_baseline_star_24"/>
-
 
         </RelativeLayout>
     </LinearLayout>
