--- a/app/src/main/res/layout/fragment_primer.xml
+++ b/app/src/main/res/layout/fragment_primer.xml
@@ -27,7 +27,7 @@
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/button_float"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -35,7 +35,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="69dp"
+        android:layout_marginBottom="70dp"
         android:src="@drawable/ic_baseline_add_24"
         app:borderWidth="0dp"
         app:elevation="4dp" />
