--- a/app/src/main/res/layout/list_elements.xml
+++ b/app/src/main/res/layout/list_elements.xml
@@ -31,6 +31,7 @@
                 android:layout_gravity="center"
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
+                app:tint="#03a9f4"
                 app:srcCompat="@drawable/ic_baseline_add_task_24" />
 
             <LinearLayout
@@ -46,21 +47,21 @@
                 android:layout_marginTop="2dp"
                 android:orientation="vertical">
                 <TextView
-                    android:id="@+id/task_tittle"
+                    android:id="@+id/titulo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
-                    android:text="Test Prueba"
+                    android:text=""
                     android:maxLines="1"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"/>
                 <TextView
-                    android:id="@+id/task_descripcion"
+                    android:id="@+id/descripcion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:text="Second test"
+                    android:text=""
                     android:textSize="15sp"/>
 
             </LinearLayout>
