se agregó el menu option para salir de la cuenta

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -28,6 +28,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         app:labelVisibilityMode="selected"
+        app:itemIconTint="#FFFFFF"
         style="@style/BottomNavigation"
 
     />
