--- a/app/src/main/res/layout/fragment_tercero.xml
+++ b/app/src/main/res/layout/fragment_tercero.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="60dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -46,7 +46,7 @@
                     android:layout_marginTop="125dp"
                     android:foreground="@drawable/ic_baseline_camera_alt_24" />
             </androidx.cardview.widget.CardView>
-
+            <!---android:layout_marginBottom="35dp"-->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
