--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/detalle_tarea"
     tools:context=".Vistas.Detalle_Tarea">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
