favorito y eliminar tarea agregados

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,8 @@
                     android:id="@+id/editTextEmail"
                     style="@style/modifiedEditText"
                     android:drawableStart="@drawable/ic_baseline_person_24"
+                    android:drawablePadding="6dp"
+                    android:ems="10"
                     android:hint="Correo Electrónico"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
@@ -68,6 +70,7 @@
                     style="@style/modifiedEditText"
                     android:drawableStart="@drawable/ic_baseline_lock_24"
                     android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
+                    android:drawablePadding="6dp"
                     android:hint="Contraseña"
                     android:inputType="textPassword"
                     android:maxLines="1"
