--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -61,6 +61,7 @@
                     style="@style/modifiedEditText"
                     android:hint="Correo Electrónico"
                     android:drawableStart="@drawable/ic_baseline_email_24"
+                    android:drawablePadding="6dp"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:textSize="16dp"/>
