--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -64,6 +64,7 @@
                             style="@style/modifiedEditText"
                             android:hint="Nombre(s)"
                             android:drawableStart="@drawable/ic_baseline_person_24"
+                            android:drawablePadding="6dp"
                             android:inputType="textPersonName"
                             android:maxLines="1"
                             android:textSize="16dp"
@@ -79,6 +80,7 @@
                             style="@style/modifiedEditText"
                             android:hint="Nº Documento"
                             android:drawableStart="@drawable/ic_baseline_credit_card_24"
+                            android:drawablePadding="6dp"
                             android:inputType="number"
                             android:maxLines="1"
                             android:textSize="16dp"
@@ -95,6 +97,7 @@
                             android:hint="Correo Electrónico"
                             android:inputType="textEmailAddress"
                             android:drawableStart="@drawable/ic_baseline_email_24"
+                            android:drawablePadding="6dp"
                             android:maxLines="1"
                             android:textSize="16dp"
                             android:maxLength="60"/>
@@ -110,6 +113,7 @@
                             style="@style/modifiedEditText"
                             android:hint="Número Telefónico"
                             android:drawableStart="@drawable/ic_baseline_phone_iphone_24"
+                            android:drawablePadding="6dp"
                             android:inputType="phone"
                             android:maxLines="1"
                             android:textSize="16dp"
@@ -129,6 +133,7 @@
                             android:hint="Contraseña"
                             android:drawableStart="@drawable/ic_baseline_lock_24"
                             android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
+                            android:drawablePadding="6dp"
                             android:inputType="textPassword"
                             android:maxLines="1"
                             android:textSize="16dp"
