--- a/app/src/main/res/layout/activity_detalle_tablero.xml
+++ b/app/src/main/res/layout/activity_detalle_tablero.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
-    android:background="@color/login_bk_color"
-    android:focusableInTouchMode="true"
-    android:gravity="center"
-    tools:context=".Vistas.PrimerFragment">
+    android:id="@+id/detalle_tablero"
+    tools:context=".Vistas.Detalle_Tablero">
 
+    <TextView
+        android:id="@+id/titulo_tablero"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="60dp"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="60dp"
         android:orientation="vertical">
-
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listRecycleView_tablero"
+            android:id="@+id/listRecycleView_tarea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_agregar_tablero"
+        android:id="@+id/btn_agregar_tarea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -35,11 +40,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/ic_baseline_add_24"
         app:borderWidth="0dp"
         app:elevation="4dp" />
-
-
 
 </RelativeLayout>
