--- a/app/src/main/res/layout/list_tablero.xml
+++ b/app/src/main/res/layout/list_tablero.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/carview_main"
+    android:id="@+id/carview_main_tablero"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:animateLayoutChanges="true"
@@ -22,7 +22,7 @@
             android:padding="6dp">
 
             <ImageView
-                android:id="@+id/task_image"
+                android:id="@+id/task_image_tablero"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
@@ -32,12 +32,12 @@
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
                 app:tint="#03a9f4"
-                app:srcCompat="@drawable/ic_baseline_add_task_24" />
+                app:srcCompat="@drawable/ic_baseline_dataset_24" />
 
             <LinearLayout
-                android:id="@+id/linearLayour_main"
+                android:id="@+id/linearLayour_main_tablero"
                 android:layout_marginLeft="4dp"
-                android:layout_toRightOf="@id/task_image"
+                android:layout_toRightOf="@id/task_image_tablero"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -47,7 +47,7 @@
                 android:layout_marginTop="2dp"
                 android:orientation="vertical">
                 <TextView
-                    android:id="@+id/titulo"
+                    android:id="@+id/titulo_tablero"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
@@ -56,14 +56,6 @@
                     android:textColor="@android:color/black"
                     android:textSize="15sp"
                     android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/descripcion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:text=""
-                    android:textSize="15sp"/>
-
             </LinearLayout>
 
         </RelativeLayout>
